# CASM

./: .gitignore  CMakeLists.txt  README.md  makefile
inc/: casm_config.h  casm_dict.h  casm_encoder.h  casm_globals.h  casm_inst_formats.h  casm_preprocessor.h  casm_tokenizer.h  casm_utils.h  template.h
src/: casm_dict.c  casm_encoder.c  casm_identifier.c  casm_main.c  casm_preprocessor.c  casm_tokenizer.c  casm_utils.c  csam_dict.c  ts_template.c
tests/: CMakeLists.txt
tests/inc/: ts_dict.h  ts_encoder.h  ts_error_handling.h  ts_parser.h  ts_preprocessor.h  ts_template.h  ts_tokenizer.h
tests/resources/ds_encoder/: encoder1.asm
tests/resources/ds_label_to_addr/: label_to_addr1.asm  label_to_addr2.asm
tests/resources/ds_preprocessor/: preprocessor1.asm
tests/resources/ds_procs_to_labels/: proc_to_label1.asm  proc_to_label2.asm
tests/resources/ds_remove_comments/: remove_comments1.asm  remove_comments2.asm
tests/resources/ds_remove_whitespaces/: trimWhitespaces1.asm  trimWhitespaces10.asm  trimWhitespaces11.asm  trimWhitespaces12.asm  trimWhitespaces13.asm  trimWhitespaces2.asm  trimWhitespaces3.asm  trimWhitespaces4.asm  trimWhitespaces5.asm  trimWhitespaces6.asm  trimWhitespaces7.asm  trimWhitespaces8.asm  trimWhitespaces9.asm
tests/src/: main.c  ts_dict.c  ts_encoder.c  ts_error_handling.c  ts_parser.c  ts_preprocessor.c  ts_tokenizer.c
